Make xterm pretty. Turn on xterm mouse mode in emacs.

--- a/.gitconfig
+++ b/.gitconfig
@@ -3,7 +3,7 @@
         bb = branch -avv
         bd = branch -d
         bnuke = !git branch -d $1 && git push --delete origin
-        c = commit -ae
+        c = !sh gcommit.sh
         co = checkout
         d = diff
         df = diff --name-status
