--- a/X/.xmobarrc
+++ b/X/.xmobarrc
@@ -1,16 +1,16 @@
-Config { font = "-*-Fixed-Bold-R-Normal-*-13-*-*-*-*-*-*-*"
-       , bgColor = "black"
-       , fgColor = "grey"
+Config { font = "xft:Anonymous Pro:pixelsize=14"
+       , bgColor = "#242424"
+       , fgColor = "#f6f3e8"
        , position = TopW L 100
-       , lowerOnStart = True
+       -- , lowerOnStart = True
        , commands = [ Run Weather "EDDB" ["-t"," <tempC>C","-L","64","-H","77","--normal","green","--high","red","--low","lightblue"] 36000
-                    , Run Cpu ["-L","3","-H","50","--normal","green","--high","red"] 10
-                    , Run Memory ["-t","Mem: <usedratio>%"] 10
-                    , Run Swap [] 10
+                    --, Run Cpu ["-L","3","-H","50","--normal","green","--high","red"] 10
+                    --, Run Memory ["-t","Mem: <usedratio>%"] 10
+                    --, Run Swap [] 10
                     , Run Date "%a %b %_d %H:%M" "date" 100
                     , Run StdinReader
                     ]
        , sepChar = "%"
        , alignSep = "}{"
-       , template = "%StdinReader% }{ <fc=#ee9a00>%date%</fc> | %EDDB%"
+       , template = "%StdinReader% }{ <fc=#ee9a00>%date%</fc> / %EDDB%"
        }
