--- a/.gitconfig
+++ b/.gitconfig
@@ -8,14 +8,15 @@
         d = diff
         df = diff --name-status
         f = fetch
+        fml = !git reset --hard origin/`git rev-parse --abbrev-ref HEAD`
         l = log
         lt = log --oneline --graph
         lf = log --name-status
         p = pull
         pp = push -u origin HEAD
         s = status -sb
+        ru = !git rebase origin/`git rev-parse --abbrev-ref HEAD`
         setuser = !git_setuser.py
-        ro = !git rebase origin/`git branch | grep \\* | awk '{print $2}'`
         addnew = !git status -s | cut -c 4- | xargs git add
 [color]
         diff = auto
@@ -30,3 +31,5 @@
 	file-view-vpane-position = 410
 [pivotal]
 	full-name = Mike Verdone
+[user]
+	name = Mike Verdone
