--- a/.gitconfig
+++ b/.gitconfig
@@ -16,6 +16,7 @@
 	submodule-update-everything = submodule update --recursive --init
 	submodule-what = submodule -q foreach 'echo $path: && git status -s'
 	stash-all = submodule foreach -q 'git status -s | read && git stash -u ||  true'
+	sync-submodules = !git submodule status | perl -ne '/^ ([^ ]+) ([^ ]+)/; print "(cd ../live/$2 && git checkout $1)\n"' | bash
 
 	bd = !git branch-delete
         b = branch
@@ -48,6 +49,8 @@
 	rmi = !git tt && git rebase -i --autosquash origin/master
 	what = !git submodule-what
 	sta = !git stash-all
+	syncsub = !git sync-submodules
+
 [color]
         diff = auto
         status = auto
@@ -72,3 +75,5 @@
 	autocrlf = input
 [push]
 	default = simple
+[rebase]
+	autosquash = true
